@@ -8,7 +8,6 @@ import net.geant.nmaas.nmservice.deployment.containerorchestrators.kubernetes.re
 import net.geant.nmaas.nmservice.deployment.containerorchestrators.kubernetes.repositories.ServiceStorageVolumeRepository;
 import net.geant.nmaas.orchestration.Identifier;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.annotation.Profile;
 import org.springframework.context.annotation.Scope;
 import org.springframework.context.annotation.ScopedProxyMode;
 import org.springframework.stereotype.Component;
@@ -18,13 +17,11 @@ import org.springframework.transaction.annotation.Transactional;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static net.geant.nmaas.nmservice.deployment.containerorchestrators.kubernetes.entities.ServiceStorageVolumeType.MAIN;
 import static net.geant.nmaas.nmservice.deployment.containerorchestrators.kubernetes.entities.ServiceStorageVolumeType.SHARED;
 
 @Component
-@Profile("env_kubernetes")
 @Scope(proxyMode = ScopedProxyMode.TARGET_CLASS)
 public class KubernetesRepositoryManager extends NmServiceRepositoryManager<KubernetesNmServiceInfo> {
 
@@ -40,7 +37,7 @@ public class KubernetesRepositoryManager extends NmServiceRepositoryManager<Kube
         KubernetesNmServiceInfo serviceInfo = loadService(deploymentId);
         List<ServiceStorageVolume> storageVolumes = serviceInfo.getStorageVolumes().stream()
                 .filter(v -> Arrays.asList(MAIN, SHARED).contains(v.getType()))
-                .collect(Collectors.toList());
+                .toList();
         storageVolumes.forEach(v -> {
             v.setSize(storageSpace);
             storageVolumeRepository.save(v);
